# cmd-viewer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: package-checks.yml  release.yml
src/cmd_viewer/: __init__.py  __main__.py  app.py  camera.py  cli.py  colors.py  loader.py  overlays.py  render.py  representations.py  selection.py  smoothing.py
tests/: test_loader.py  test_representations.py  test_selection.py  test_smoothing.py
