[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd-md"
version = "0.1.0"
description = "Terminal-first molecular dynamics viewer for GROMACS trajectories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Wojciech Kopec" }
]
dependencies = [
  "MDAnalysis>=2.6,<3",
  "numpy>=1.24,<3",
]
keywords = ["molecular-dynamics", "gromacs", "terminal", "viewer", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/Kopec-Lab/cmd-viewer"
Repository = "https://github.com/Kopec-Lab/cmd-viewer"
Issues = "https://github.com/Kopec-Lab/cmd-viewer/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
cmd = "cmd_viewer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
